syntax = "proto3";

service RouteGuide {
  rpc GetStatus(User) returns (Status) {}
}

message User{
  string firstname = 1;
  string lastname = 2;
}
message Status{
  string status = 1;
  string time = 2;
  User data = 3;
}